objects/Account_Event__e/Account_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event on Account Object to be consumed by Workato</description>
    <label>Account Event</label>
    <pluralLabel>Account Events</pluralLabel>
</CustomObject>