objects/Account_Event__e/fields/Account_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Limit__c</fullName>
    <description>Account Credit Limit</description>
    <label>Account Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>