objects/Account_Event__e/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>AccountId (18 digits)</description>
    <label>Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>