objects/Account_Event__e/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <description>Account Industry</description>
    <label>Account Industry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>