objects/Account_Event__e/fields/Account_MCN__c.field-meta.xml
<CustomField>
    <fullName>Account_MCN__c</fullName>
    <description>Account MCN (Master Customer Number)</description>
    <label>Account MCN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>