objects/Account_Event__e/fields/Account_NS_Subsidiary_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_NS_Subsidiary_ID__c</fullName>
    <description>Account NS_Subsidiary_ID__c</description>
    <label>Account Subsidiary</label>
    <length>80</length>
    <type>Text</type>
</CustomField>