objects/Account_Event__e/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>AccountOwner.NS_Id__c (field on the user record)</description>
    <label>Account Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>