objects/Account_Event__e/fields/Account_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Account_Payment_Terms__c</fullName>
    <description>Account Payment_Terms__c</description>
    <label>Account Payment Terms</label>
    <length>80</length>
    <type>Text</type>
</CustomField>