objects/Account_Event__e/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Account RecordTypeId</description>
    <label>Account Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>