objects/Account_Event__e/fields/Account_Sector__c.field-meta.xml
<CustomField>
    <fullName>Account_Sector__c</fullName>
    <description>Account Sector__c</description>
    <label>Account Sector</label>
    <length>80</length>
    <type>Text</type>
</CustomField>