objects/Account_Event__e/fields/Invoice_Inquiry_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Inquiry_Email__c</fullName>
    <description>A field used to assist the Order Ops team in cash collection efforts. This field is synched to Netsuite</description>
    <label>Invoice Inquiry Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>