objects/Account_Event__e/fields/Partner_Development_Director__c.field-meta.xml
<CustomField>
    <fullName>Partner_Development_Director__c</fullName>
    <description>Partner Development Director</description>
    <label>Partner Development Director</label>
    <length>50</length>
    <type>Text</type>
</CustomField>