objects/Account_Event__e/fields/Primary_Bill_to_email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bill_to_email__c</fullName>
    <label>Primary Bill to email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>