objects/Account_Event__e/fields/Tax_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reg_Number__c</fullName>
    <label>Tax Reg. Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>